--- a/single.yaml
+++ b/single.yaml
@@ -8,6 +8,25 @@ neo4j:
   edition: "enterprise"
   acceptLicenseAgreement: "yes"
 
+config:
+  dbms.default_advertised_address: "localhost"
+  dbms.connector.bolt.advertised_address: "localhost:7680"
+  dbms.connector.http.advertised_address: "localhost:7470"
+  dbms.security.authorization_providers: "oidc-azure-oidc,native"
+  dbms.security.authentication_providers: "oidc-azure-oidc,native"
+  dbms.security.oidc.azure-oidc.display_name: "Azure SSO"
+  dbms.security.oidc.azure-oidc.auth_flow: "pkce"
+  dbms.security.oidc.azure-oidc.auth_endpoint: "https://login.microsoftonline.com/54e85725-ed2a-49a4-a19e-11c8d29f9a0f/oauth2/v2.0/authorize"
+  dbms.security.oidc.azure-oidc.token_endpoint: "https://login.microsoftonline.com/54e85725-ed2a-49a4-a19e-11c8d29f9a0f/oauth2/v2.0/token"
+  dbms.security.oidc.azure-oidc.redirect_uri: "http://localhost:7470/browser/?idp_id=azure-oidc&auth_flow_step=redirect_uri"
+  dbms.security.oidc.azure-oidc.params: "client_id=774d9fcd-ff80-4b5c-87cc-9fa4615c0871;response_type=code;scope=openid profile email"
+  dbms.security.oidc.azure-oidc.config: "principal=unique_name;code_challenge_method=S256;token_type_principal=id_token;token_type_authentication=id_token"
+  dbms.security.oidc.azure-oidc.authorization.group_to_role_mapping: "16903965-5ac8-4522-abac-851469103279=admin"
+  dbms.security.oidc.azure-oidc.well_known_discovery_uri: "https://login.microsoftonline.com/54e85725-ed2a-49a4-a19e-11c8d29f9a0f/v2.0/.well-known/openid-configuration"
+  dbms.security.oidc.azure-oidc.audience: "774d9fcd-ff80-4b5c-87cc-9fa4615c0871"
+  dbms.security.oidc.azure-oidc.claims.username: "preferred_username"
+  dbms.security.oidc.azure-oidc.claims.groups: "groups"
+
 volumes:
   data:
     mode: "volume"
